<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">

    <PreferenceCategory android:title="@string/function_cat">
        <androidx.preference.SwitchPreferenceCompat
            android:key="isRunning"
            android:summary="@string/service_summary"
            android:title="@string/service_controller" />

        <ListPreference
            android:key="activeProfile"
            android:title="@string/profile" />
    </PreferenceCategory>

    <PreferenceCategory android:title="@string/proxy_cat">
        <CheckBoxPreference
            android:defaultValue="false"
            android:key="isPAC"
            android:summary="@string/pac_summary"
            android:title="@string/pac" />

        <EditTextPreference
            android:key="host"
            android:summary="@string/host_summary"
            android:title="@string/host" />
        <EditTextPreference
            android:defaultValue="3128"
            android:key="port"
            android:summary="@string/port_summary"
            android:title="@string/port" />

        <ListPreference
            android:defaultValue="http"
            android:entries="@array/proxy_type_entry"
            android:entryValues="@array/proxy_type_value"
            android:key="proxyType"
            android:title="@string/proxy_type" />

        <CheckBoxPreference
            android:key="isAutoConnect"
            android:summary="@string/auto_connect_summary"
            android:title="@string/auto_connect" />

        <com.ksmaze.android.preference.ListPreferenceMultiSelect
            android:defaultValue=""
            android:dialogTitle="@string/ssid"
            android:entries="@array/ssid_default_entries"
            android:entryValues="@array/ssid_default_values"
            android:key="ssid"
            android:summary="@string/ssid_summary"
            android:title="@string/ssid" />

        <com.ksmaze.android.preference.ListPreferenceMultiSelect
            android:defaultValue=""
            android:dialogTitle="@string/excluded_ssid"
            android:entries="@array/excluded_ssid_default_entries"
            android:entryValues="@array/excluded_ssid_default_values"
            android:key="excludedSsid"
            android:summary="@string/excluded_ssid_summary"
            android:title="@string/excluded_ssid" />

        <Preference
            android:key="bypassAddrs"
            android:summary="@string/set_bypass_summary"
            android:title="@string/set_bypass" />
    </PreferenceCategory>

    <PreferenceCategory android:title="@string/user_cat">
        <CheckBoxPreference
            android:defaultValue="false"
            android:key="isAuth"
            android:title="@string/auth" />

        <EditTextPreference
            android:key="user"
            android:summary="@string/user_summary"
            android:title="@string/user" />
        <EditTextPreference
            android:key="password"
            android:inputType="textPassword"
            android:summary="@string/password_summary"
            android:title="@string/password" />

        <CheckBoxPreference
            android:key="isNTLM"
            android:summary="@string/ntlm_summary"
            android:title="@string/ntlm" />

        <EditTextPreference
            android:key="domain"
            android:summary="@string/domain_summary"
            android:title="@string/domain" />

        <EditTextPreference
            android:key="certificate"
            android:summary="@string/certificate_summary"
            android:title="@string/certificate" />
    </PreferenceCategory>

    <PreferenceCategory android:title="@string/fearute_cat">
        <CheckBoxPreference
            android:defaultValue="true"
            android:key="isAutoSetProxy"
            android:summary="@string/auto_set_proxy_summary"
            android:title="@string/auto_set_proxy" />

        <Preference
            android:key="proxiedApps"
            android:summary="@string/proxied_apps_summary"
            android:title="@string/proxied_apps" />

        <CheckBoxPreference
            android:defaultValue="false"
            android:key="isBypassApps"
            android:summary="@string/bypass_apps_summary"
            android:title="@string/bypass_apps" />
    </PreferenceCategory>

    <PreferenceCategory android:title="@string/notif_cat">
        <Preference
            android:key="ringtone"
            android:summary="@string/notif_ringtone_summary"
            android:title="@string/notif_ringtone_title" />

        <CheckBoxPreference
            android:defaultValue="true"
            android:key="isVibrate"
            android:summary="@string/notif_vibrate_summary"
            android:title="@string/notif_vibrate_title" />
    </PreferenceCategory>

</PreferenceScreen>
